--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "fuse.js": "^3.2.0",
     "gh-pages": "^1.1.0",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "moment": "^2.20.1",
     "react": "^16.2.0",
