--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.2.0",
     "react-datetime": "^2.14.0",
     "react-dom": "^16.2.0",
+    "react-ga": "^2.4.1",
     "react-scripts": "1.1.1",
     "react-select": "^1.2.1",
     "react-select-search": "^0.5.6"
