--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ccc",
-  "homepage": "https://douardalexandre.github.io/",
+  "homepage": "https://douardalexandre.github.io/ccc",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
